<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendario Aero</string>
    <string name="action_settings">Settings</string>
    <string name="event">Event:</string>
    <string name="events">Events</string>
    <string name="tournament">Tournament:</string>
    <string name="tournaments">Tournaments</string>
    <string name="selectcategory">Select Category</string>
    <string name="icondescription">Image icon</string>
    <string name="responsable">Responsable:</string>
    <string name="location">Location:</string>
    <string name="detailshort">Det.</string>
    <string name="responsabledetailshint">"See the full details for this event's responsable person"</string>
    <string name="gpscoord">GPS Coord.:</string>
    <string name="date">Date:</string>
    <string name="favourite">Favourite</string>
    <string name="interested">Interested</string>
    <string name="rememberme">Remember Me</string>
    <string name="remembermealert">Set an alarm to remember me this event.</string>
    <string name="seeonmaps">See on Maps</string>
    <string name="seemapshint">See this place on google maps.</string>
    <string name="createtest">Create test</string>
    <string name="syssettings">System Settigns</string>
    <string name="calendarserver">Calendar Server</string>
    <string name="calendarserverhint">The server URL that will be used to sync this app with the calendar found there.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="categorytitle">Category Title</string>
    <string name="goback">Go Back</string>
    <string name="eventdetails">Event Details</string>
    <string name="title">Title:</string>
    <string name="coordinates">Coordinates:</string>
    <string name="category">Category:</string>
    <string name="alert">Alert</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="email">E-Mail:</string>
    <string name="sendmail">Send Mail&#8230;</string>
    <string name="nocoordinateserror">Coordinates not found, please call the responsable or send an email to get the address.</string>
    <string name="sendEmail">Send E-Mail</string>
    <string name="callresponsable">Call Responsable</string>
    <string name="emailsubject">Information Request</string>
    <string name="pref_sync">Synchronize</string>
    <string name="pref_sync_sum">Synchronize the calendar with the main site.</string>
    <string name="elcansoftware">Calendario Aero</string>
    <string name="version">Version 1.0.1</string>
    <string name="developedby">Developed by:</string>
    <string name="developer">Mario O. Villarroel</string>
    <string name="close">Close</string>
    <string name="aboutus">About Us</string>
    <string name="writeserveraddr">Write here the server address to sync</string>
    <string name="scan">Scan</string>
    <string name="syncro">Synchronize</string>
	<string name="syncok">Sync OK</string>
	<string name="logodesc">Application Logo</string>
	<string name="pleasewait">Please Wait&#8230;</string>
	<string name="syncronizing">Downloading Data&#8230;</string>
	<string name="imagedesc">Image</string>
	<string name="filter">Filter</string>
	<string name="datefrom">Date From:</string>
	<string name="dateto">Date To:</string>
	<string name="pleasecheckfields">Please check the date fields, date must be in the following format: YYYY&#8211;MM&#8211;DD, where Y stands for Year, M for month 01&#8211;12, and D for day, 01 to 31</string>
	<string name="subcategory">Sub-Category</string>
	<string name="all">All</string>
	<string name="link">Link</string>
	<string name="subscribe">Subscribe</string>
	<string name="noemailaddr">E-Mail address is not valid or is not set.</string>
	<string name="nophonenum">Phone number is not valid or is not set.</string>
	<string name="dots">&#8230;</string>
	<string name="club">Club:</string>
	<string name="errormissingresponsable">The responsable is not set, please request the details to the calendar administrator</string>
	<string name="with">With</string>
	<string name="pcalas">Pablo Calás</string>
	<string name="notes">Notes:</string>
	<string name="seenotes">See Notes</string>
	<string name="nonotes">No notes</string> 
</resources>
