<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailscroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondoapp"
        android:orientation="vertical"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/tviTournament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/eventdetails"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvRespEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tvDetCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tvEvtDetTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minLines="2"
                    android:scrollHorizontally="false"
                    android:text="@string/title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvRespName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tvDetDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvResPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinates"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tvDetCoord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scrollHorizontally="false"
                    android:text="@string/coordinates"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tvDetLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minLines="2"
                    android:scrollHorizontally="false"
                    android:text="@string/location"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/responsable"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tvDetResp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minLines="2"
                    android:scrollHorizontally="false"
                    android:text="@string/responsable"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/blue"
                    android:textStyle="italic|bold"
                    android:typeface="normal" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tournament"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tvtTournament"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minLines="2"
                    android:scrollHorizontally="false"
                    android:text="@string/tournament"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nonotes"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>
            
        </TableLayout>

        
        <Button
            android:id="@+id/btSubscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/arrowjoin"
            android:text="@string/subscribe" />

        <Button
            android:id="@+id/btMaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/earth57"
            android:text="@string/seeonmaps" />
    </LinearLayout>

</ScrollView>