<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/respscrview"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout2f"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoapp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tviTournament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/responsable"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tvRespEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:minLines="2"
                    android:scrollHorizontally="false"
                    android:text="@string/all"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tvRespName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:minLines="2"
                    android:scrollHorizontally="false"
                    android:text="@string/all"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tvResPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:minLines="2"
                    android:scrollHorizontally="false"
                    android:text="@string/all"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tvRespEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:minLines="2"
                    android:scrollHorizontally="false"
                    android:text="@string/all"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/club"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tvClub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:minLines="2"
                    android:text="@string/all"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:gravity="center" >

            <Button
                android:id="@+id/btEmail"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="6.60"
                android:drawableLeft="@drawable/mail59"
                android:height="40dp"
                android:text="@string/sendEmail" />

            <Button
                android:id="@+id/btCancelset"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/call7"
                android:height="40dp"
                android:text="@string/callresponsable" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
